fix wrapping figcaption on old devices

--- a/common.css
+++ b/common.css
@@ -25,13 +25,10 @@
   font-family: sans-serif;
 }
 
-/* section#projects-carousel figure {
-  display: table;
-} */
-
 section#projects-carousel figcaption {
   top: auto;
   bottom: 0;
+  width: 100%;
   color: #f50;
   /* white-space: break-spaces; */
   white-space:pre-wrap;
